# winwrap

./: Cargo.toml  LICENSE-APACHE  Progress.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: snapshot.rs  veh.rs
examples/dll_injection/: Cargo.toml  README.md
examples/dll_injection/dll_injector/: Cargo.toml
examples/dll_injection/dll_injector/src/: main.rs
examples/dll_injection/mydll/: Cargo.toml
examples/dll_injection/mydll/src/: lib.rs
examples/find_first_file/: Cargo.toml
examples/find_first_file/src/: winwrapapi.rs
src/: handle.rs  lib.rs  macros.rs  prelude.rs
src/raw/: mod.rs
src/raw/um/: consoleapi.rs  debugapi.rs  errhandlingapi.rs  fileapi.rs  handleapi.rs  ioapiset.rs  jobapi.rs  jobapi2.rs  libloaderapi.rs  memoryapi.rs  mod.rs  namedpipeapi.rs  processenv.rs  processthreadsapi.rs  stringapiset.rs  synchapi.rs  sysinfoapi.rs  timezoneapi.rs  tlhelp32.rs  verrsrc.rs  winbase.rs  winreg.rs  winuser.rs  winver.rs  wow64apiset.rs
src/shared/: minwinbase.rs  minwindef.rs  mod.rs
src/string/: mod.rs
src/um/: errhandlingapi.rs  fileapi.rs  handleapi.rs  ioapiset.rs  jobapi.rs  jobapi2.rs  libloaderapi.rs  memoryapi.rs  minwinbase.rs  mod.rs  namedpipeapi.rs  processenv.rs  processthreadsapi.rs  stringapiset.rs  synchapi.rs  timezoneapi.rs  tlhelp32.rs  winbase.rs  winnt.rs  winreg.rs  winuser.rs  winver.rs  wow64apiset.rs
src/vc/: excpt.rs  mod.rs
tests/: handleapi.rs  libloaderapi.rs  namedpipe.rs  struct.rs  test.rs  winver.rs  wow64apiset.rs
winwrap-derive/: Cargo.toml  LICENSE  README.md
winwrap-derive/src/: lib.rs
