[package]
name = "winwrap-derive"
version = "0.1.1"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/takubokudori/winwrap"
repository = "https://github.com/takubokudori/winwrap"
description = "winwrap derives"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.57", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
